--- a/init.org
+++ b/init.org
@@ -113,11 +113,10 @@ I'll do this first, so that it goes back to this when I exit full screen mode (i
  (setq vterm-tramp-shells
        '("/usr/bin/bash" "/bin/bash" "/bin/zsh" "docker" "/bin/sh"))
  :config
- (define-key
-  vterm-mode-map (kbd "M-k")
+(define-key vterm-mode-map (kbd "M-k")
   (lambda ()
     (interactive)
-    (kill-this-buffer nil)))
+    (kill-buffer (current-buffer))))
  (define-key vterm-mode-map (kbd "M-0") nil)
  (define-key vterm-mode-map (kbd "M-1") nil)
  (define-key vterm-mode-map (kbd "M-2") nil)
@@ -388,7 +387,7 @@ I think this is a little too aggressive right now, but it's a cool idea.
 
 ** Global Keybindings
 #+begin_src emacs-lisp :load yes
-(global-set-key (kbd "M-k") (lambda () (interactive) (kill-this-buffer nil)))
+(global-set-key (kbd "M-k") 'kill-current-buffer)
 (global-set-key (kbd "C-c C-b") 'compile)
 (global-set-key (kbd "M-0") 'delete-window)
 (global-set-key (kbd "M-1") 'delete-other-windows)
