--- a/init.org
+++ b/init.org
@@ -3198,6 +3198,73 @@ This is really only used in the publishing script of my emacs config, I don't ne
           :default-chat-temperature 0.2)))
  (forge-llm-setup))
 #+end_src
+*** Fix for GitLab MR Templates Without YAML Front Matter
+Forge requires YAML front matter in GitLab MR templates, but GitLab itself doesn't. This fix allows templates without front matter to work by using filenames as prompts. Remove when [[https://github.com/magit/forge/issues][forge upstream issue]] is fixed.
+#+begin_src emacs-lisp :load yes
+;; Override forge's template processing to support templates without YAML front matter
+(defvar my-forge--current-template-file nil
+  "Current template file being processed")
+
+(defun my-forge--topic-templates (repo class)
+  "Override to pass filename context to parser"
+  (mapcan (lambda (file)
+            (with-temp-buffer
+              (magit-git-insert "cat-file" "-p" file)
+              (if (equal (file-name-nondirectory file) "config.yml")
+                  (forge--topic-parse-template-config)
+                (let ((my-forge--current-template-file file))
+                  (list (my-forge--topic-parse-template))))))
+          (forge--topic-template-files repo class)))
+
+(defun my-forge--topic-parse-template ()
+  "Parse template, using filename for prompt if no YAML front matter"
+  (goto-char (point-min))
+  (skip-chars-forward "\s\t\n\r")
+  (if-let* ((beg (and (looking-at "^---[\s\t]*$")
+                      (point)))
+            (end (and (zerop (forward-line))
+                      (re-search-forward "^---[\s\t]*$" nil t)
+                      (match-beginning 0)))
+            (repoid (oref (forge-get-repository :tracked) id)))
+      ;; Has YAML front matter - use original logic
+      (let-alist (yaml-parse-string (magit--buffer-string beg end)
+                                    :object-type 'alist
+                                    :sequence-type 'list
+                                    :null-object nil
+                                    :false-object nil)
+        `((prompt . ,(format "%s — %s"
+                             (and .name
+                                  (stringp .name)
+                                  (propertize .name 'face 'bold))
+                             .about))
+          (title . ,(and .title
+                         (stringp .title)
+                         (string-trim .title)))
+          (text . ,(magit--buffer-string (point) nil ?\n))
+          (labels . ,(cl-intersection
+                      (ensure-list .labels)
+                      (forge-sql-car [:select name :from label
+                                      :where (= repository $s1)]
+                                     repoid)
+                      :test #'equal))
+          (assignees . ,(cl-intersection
+                         (ensure-list .assignees)
+                         (forge-sql-car [:select login :from assignee
+                                         :where (= repository $s1)]
+                                        repoid)
+                         :test #'equal))
+          (draft . ,(and (booleanp .draft) .draft))))
+    ;; No YAML - create prompt from actual filename
+    (let ((filename (if my-forge--current-template-file
+                        (file-name-sans-extension
+                         (file-name-nondirectory 
+                          (replace-regexp-in-string "^[^:]+:" "" my-forge--current-template-file)))
+                      "Template")))
+      `((prompt . ,(propertize filename 'face 'bold))
+        (text . ,(magit--buffer-string))))))
+
+(advice-add 'forge--topic-templates :override #'my-forge--topic-templates)
+#+end_src
 ** Magit Todos mode
 This is currently broken for me.
 #+begin_src emacs-lisp :load no
