--- a/init.org
+++ b/init.org
@@ -1262,9 +1262,10 @@ From [[https://github.com/minad/corfu/wiki#configuring-corfu-for-eglot][this sou
 
 (defun my/eglot-capf ()
   (setq-local completion-at-point-functions
-              (list (cape-capf-super
+              (list #'tempel-expand  ; Tempel snippets (exact match)
+                    (cape-capf-super
                      #'eglot-completion-at-point
-                     ;; #'yas-expand
+                     #'cape-keyword  ; Provides language keywords like "pass", "def", etc.
                      #'cape-file))))
 
 (add-hook 'eglot-managed-mode-hook #'my/eglot-capf)
@@ -3931,7 +3932,7 @@ This is the old way of using ~tree-sitter~ in emacs. In emacs 29, this moved to 
 #+END_SRC
 *** Combobulate
 Combobulate seems like a cool idea, but I've found it to be more frustrating than helpful in python.
-#+begin_src emacs-lisp :load yes
+#+begin_src emacs-lisp :load no
 (use-package
  combobulate
  :straight '(combobulate :type git :host github :repo "mickeynp/combobulate")
@@ -3985,7 +3986,7 @@ Combobulate seems like a cool idea, but I've found it to be more frustrating tha
   ["Selection" ("SPC" "Mark node" combobulate-mark-node-dwim)]))
 #+end_src
 **** Combobulate-python
-#+begin_src emacs-lisp :load yes
+#+begin_src emacs-lisp :load no
 (defun my/combobulate-python-setup ()
   "Custom setup for Combobulate in Python mode."
   (setq-local combobulate-key-prefix "C-c")
