--- a/init.org
+++ b/init.org
@@ -265,7 +265,67 @@ BUFFER may be either a buffer or its name (a string)."
 
  ;; Override vterm-toggle--project-root
  (defun vterm-toggle--project-root ()
-   (my/get-project-root)))
+   (my/get-project-root))
+
+ ;; Exclude Claude Code buffers from vterm-toggle detection
+ ;; This prevents M-T from hiding Claude Code when you're in its vterm buffer
+ (defun my/vterm-toggle--get-window ()
+   "Get vterm window, excluding Claude Code buffers."
+   (cl-find-if #'(lambda(w)
+                   (let ((buf (window-buffer w)))
+                     (and (provided-mode-derived-p
+                           (buffer-local-value 'major-mode buf)
+                           'vterm-mode)
+                          ;; Exclude Claude Code buffers by name pattern
+                          (not (string-prefix-p "*claude-code[" (buffer-name buf))))))
+               (window-list)))
+
+ ;; Override vterm-toggle's window detection to exclude Claude Code
+ (advice-add 'vterm-toggle--get-window :override #'my/vterm-toggle--get-window)
+
+ ;; Also exclude Claude Code from the buffer list used by M-n/M-p cycling
+ ;; Override the mode hook that adds buffers to the cycling list
+ (defun my/vterm-toggle--mode-hook ()
+   "Hook for `vterm-mode-hook' that excludes Claude Code buffers."
+   (unless (string-prefix-p "*claude-code[" (buffer-name))
+     (add-to-list 'vterm-toggle--buffer-list (current-buffer))))
+
+ ;; Replace the original hook with our filtered version
+ (remove-hook 'vterm-mode-hook #'vterm-toggle--mode-hook)
+ (add-hook 'vterm-mode-hook #'my/vterm-toggle--mode-hook)
+
+ ;; The main issue: vterm-toggle checks (derived-mode-p 'vterm-mode) directly
+ ;; which catches Claude Code before our --get-window override matters.
+ ;; We need to make vterm-toggle think we're NOT in vterm-mode when in Claude Code.
+ (defun my/vterm-toggle-advice (orig-fun &rest args)
+   "Advice for vterm-toggle to treat Claude Code as a non-vterm buffer."
+   (if (and (derived-mode-p 'vterm-mode)
+            (string-prefix-p "*claude-code[" (buffer-name)))
+       ;; We're in Claude Code - call vterm-toggle-show directly
+       ;; This is what vterm-toggle does when NOT in a vterm buffer
+       (vterm-toggle-show)
+     ;; Normal case - proceed as usual
+     (apply orig-fun args)))
+
+ (advice-add 'vterm-toggle :around #'my/vterm-toggle-advice)
+
+ ;; M-n/M-p should do nothing in Claude Code (they're for cycling vterm buffers only)
+ (defun my/vterm-toggle-forward-advice (orig-fun &rest args)
+   "Advice for vterm-toggle-forward to ignore Claude Code buffers."
+   (unless (and (derived-mode-p 'vterm-mode)
+                (string-prefix-p "*claude-code[" (buffer-name)))
+     ;; Not in Claude Code - proceed normally
+     (apply orig-fun args)))
+
+ (defun my/vterm-toggle-backward-advice (orig-fun &rest args)
+   "Advice for vterm-toggle-backward to ignore Claude Code buffers."
+   (unless (and (derived-mode-p 'vterm-mode)
+                (string-prefix-p "*claude-code[" (buffer-name)))
+     ;; Not in Claude Code - proceed normally
+     (apply orig-fun args)))
+
+ (advice-add 'vterm-toggle-forward :around #'my/vterm-toggle-forward-advice)
+ (advice-add 'vterm-toggle-backward :around #'my/vterm-toggle-backward-advice))
 #+end_src
 ** Eat
 #+begin_src emacs-lisp :load no
@@ -281,11 +341,18 @@ BUFFER may be either a buffer or its name (a string)."
   :init
   (setq eat-kill-buffer-on-exit t)
   (setq eat-enable-mouse t)
-  
+
   :config
-  ;; Basic key unbinding to avoid conflicts
+  ;; Unbind keys to avoid conflicts with global bindings
   (define-key eat-mode-map (kbd "M-T") nil)
-  
+  (define-key eat-mode-map (kbd "M-o") nil)
+  (define-key eat-semi-char-mode-map (kbd "M-T") nil)
+  (define-key eat-semi-char-mode-map (kbd "M-o") nil)
+
+  ;; Make ESC work with single press (map it to send C-c to the terminal)
+  (define-key eat-semi-char-mode-map (kbd "<escape>")
+    (lambda () (interactive) (eat-self-input 1 ?\C-c)))
+
   (add-hook 'eat-mode-hook 'goto-address-mode))
 
 ;; Custom eat toggle functionality
@@ -322,13 +389,8 @@ BUFFER may be either a buffer or its name (a string)."
         (let ((default-directory project-root))
           (display-buffer (eat eat-buffer-name)))))))
 
-;; Key bindings
-(with-eval-after-load 'eat
-  (define-key eat-mode-map (kbd "M-T") 'eat-toggle)
-  (define-key eat-mode-map (kbd "M-o") 'eat-toggle))
-
-(global-set-key (kbd "M-T") 'eat-toggle)
-(global-set-key (kbd "M-o") 'eat-toggle)
+;; Key bindings - Keep M-T for vterm-toggle, eat doesn't need global bindings
+;; (eat is only used for Claude Code backend, not as a primary terminal)
 
 ;; Display buffer configuration for eat
 (add-to-list
@@ -2232,10 +2294,25 @@ This one didn't work very well
  (global-set-key (kbd "C-c a") 'aider-transient-menu))
 #+end_src
 ** Claude Codes
+*** vterm-anti-flicker-filter
+Reduce flickering in vterm buffers, especially useful for Claude Code.
+#+begin_src emacs-lisp :load yes
+(use-package
+ vterm-anti-flicker-filter
+ :straight (:host github :repo "martinbaillie/vterm-anti-flicker-filter")
+ :after vterm
+ :config
+ ;; The package auto-enables for all vterm buffers via vterm-mode-hook
+ ;; You can toggle it manually with:
+ ;; M-x vterm-anti-flicker-filter-toggle
+ )
+#+end_src
+*** Claude Code IDE
 #+begin_src emacs-lisp :load yes
 (use-package
  claude-code-ide
  :straight (:host github :repo "manzaltu/claude-code-ide.el")
+ :after vterm-anti-flicker-filter
  :custom
  ;; Path to Claude CLI executable (adjust if needed)
  (claude-code-ide-cli-path "claude")
@@ -3632,7 +3709,7 @@ This is currently broken for me.
 ** Emacs Theme
 *** Leuven
 Leuven is always a nice option, beautiful with Org Mode.
-#+begin_src emacs-lisp :load no
+#+begin_src emacs-lisp :load yes
 (use-package leuven-theme
   :config
   (load-theme 'leuven-dark t))
@@ -3649,7 +3726,7 @@ Trying this theme out for a little bit.
 #+end_src
 *** ef-day
 I'm always changing my theme, but I tend to like light themes with yellow-ish backgrounds. Almost like handwriting with a yellow memo pad.
-#+begin_src emacs-lisp :load yes
+#+begin_src emacs-lisp :load no
 (use-package ef-themes :config (load-theme 'ef-day t))
 #+end_src
 *** Gruvbox-dark
@@ -3865,10 +3942,8 @@ Return nil if no project was found."
 #+end_src
 ** CSV Mode
 #+begin_src emacs-lisp :load yes
-(use-package
- csv-mode
- :straight
- '(csv-mode :type git :host github :repo "emacsmirror/csv-mode"))
+(use-package csv-mode
+  :straight t)
 #+end_src
 ** Explain Pause Mode
 #+begin_src emacs-lisp :load yes
